# libjcat

./: .clang-format  .git-blame-ignore-revs  .lgtm.yml  .travis.yml  NEWS  README.md  RELEASE  SECURITY.md  meson.build  meson_options.txt
.github/workflows/: ccpp.yml  scorecard.yml
contrib/: build-certs.py  generate-version-script.py  libjcat.spec.in
contrib/ci/: Dockerfile-debian  Dockerfile-debian-s390x  Dockerfile-fedora  Dockerfile-fedora-w64  build-debian-s390x.sh  build-fedora-w64.sh
data/: meson.build
data/tests/: libjcat.test.in  meson.build  secret.ed25519  test.btcheckpoint  test.btverifier
data/tests/colorhug/: firmware.bin.ed25519  firmware.bin.sha256  meson.build
data/tests/pki/: meson.build  test.ed25519
data/tests/pki/self/: meson.build
docs/: libjcat-docs.xml  libjcat.types  meson.build
libjcat/: fu-jcat-common.c  fu-jcat-common.h  fu-jcat-context.c  fu-jcat-context.h  fu-jcat-engine.c  fu-jcat-engine.h  fu-jcat-gnutls-common.c  fu-jcat-gnutls-common.h  fu-jcat-gnutls-ed25519-engine.c  fu-jcat-gnutls-ed25519-engine.h  fu-jcat-gnutls-mldsa87-engine.c  fu-jcat-gnutls-mldsa87-engine.h  fu-jcat-gnutls-pkcs7-engine.c  fu-jcat-gnutls-pkcs7-engine.h  fu-jcat-gpg-engine.c  fu-jcat-gpg-engine.h  fu-jcat-libcrypto-common.c  fu-jcat-libcrypto-common.h  fu-jcat-libcrypto-pkcs7-engine.c  fu-jcat-libcrypto-pkcs7-engine.h  fu-jcat-result.c  fu-jcat-result.h  fu-jcat-self-test.c  fu-jcat-sha1-engine.c  fu-jcat-sha1-engine.h  fu-jcat-sha256-engine.c  fu-jcat-sha256-engine.h  fu-jcat-sha512-engine.c  fu-jcat-sha512-engine.h  fu-jcat-tool.1  fu-jcat-tool.c  jcat-blob-private.h  jcat-blob.c  jcat-blob.h  jcat-bt-checkpoint-private.h  jcat-bt-checkpoint.c  jcat-bt-checkpoint.h  jcat-bt-proof-private.h  jcat-bt-proof.c  jcat-bt-proof.h  (+67 more)
subprojects/: json-glib.wrap
